Change user registrarion process
Now, the user must confirm a valid email, and only if this email is valid
the registration process can proceed.

--- a/src/app/auth/confirmation/confirmation.component.html
+++ b/src/app/auth/confirmation/confirmation.component.html
@@ -1,4 +1,4 @@
-<div class="container ">
+<!-- <div class="container ">
   <div class="row" style="margin-top: 60px;">
     <div class="offset-3"></div>
     <div class="col-md-6 vcenter">
@@ -9,5 +9,70 @@
         </div>  
       </div>
     </div>
+  </div>
+</div> -->
+
+<div class="container">
+  <div class="row">
+    <div class="offset-3"></div>
+    <div class="col-md-6">
+      <form name="form" class="border border-light p-5 mt-5 center-block" style="background-color: white; border-radius: 25px;" 
+      name="form" (ngSubmit)="f.form.valid && createUser()" #f="ngForm" novalidate>
+
+        <p class="h4 mb-4 text-center">Sign up</p>
+        
+        <div class="form-group">
+          <label for="username">Username</label>
+          <input type="text" name="username"  class="form-control" [(ngModel)]="model.userName" #username="ngModel"
+          [ngClass]="{'is-invalid': f.submitted && !username.valid}" placeholder="Username (Between 2 and 12 characters)" 
+          required minlength="2" maxlength="12">
+          <div *ngIf="f.submitted && email.invalid" class="invalid-input">
+            <div class="text-danger" *ngIf="username.errors?.required">Username is required</div>
+          </div>
+          <div *ngIf="model.userName != '' && email.invalid" class="invalid-input">
+            <div class="text-danger" *ngIf="username.errors?.minlength">UserName minimum length is 2 characters</div>
+            <div class="text-danger" *ngIf="username.errors?.maxlength">UserName maximum length is 12 characters</div>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" name="password"  class="form-control" [(ngModel)]="model.password" #password="ngModel" 
+          [ngClass]="{'is-invalid': f.submitted && !password.valid}" placeholder="Password (Between 4 and 12 characters)" 
+          required minlength="4" maxlength="12">
+          <div *ngIf="f.submitted && email.invalid" class="invalid-input">
+            <div class="text-danger" *ngIf="password.errors?.required">Password is required</div>
+          </div>
+          <div *ngIf="model.password != '' && email.invalid" class="invalid-input">
+            <div class="text-danger" *ngIf="password.errors?.minlength">Password minimum length is 4 characters</div>
+            <div class="text-danger" *ngIf="password.errors?.maxlength">Password maximum length is 12 characters</div>
+          </div>
+        </div>
+        
+        <div style="display: flex; align-items: center; flex-direction: column">
+          <div>
+            <ngx-recaptcha2 #captchaElem
+            [siteKey]="key" 
+            [ngModel]="recaptcha"
+            name="captchaElem"
+            (success)="handleSuccess($event)">
+            </ngx-recaptcha2>
+            <div class="text-danger" *ngIf="captchaError">Captcha is required!</div>
+          </div>
+
+          <div class="text-center">
+            <button class="btn btn-info my-4" [disabled]="logging">
+              <span *ngIf="logging" class="spinner-border spinner-border-sm text-warning" role="status" 
+              aria-hidden="true"></span>
+              Sign Up
+            </button>
+          </div>
+
+          <!-- Messages component -->
+          <app-toaster></app-toaster>
+        </div>
+
+      </form>
+    </div>
+    <div class="offset-3"></div>
   </div>
 </div>
