--- a/src/app/auth/confirmation/confirmation.component.html
+++ b/src/app/auth/confirmation/confirmation.component.html
@@ -17,7 +17,7 @@
     <div class="offset-3"></div>
     <div class="col-md-6">
       <form name="form" class="border border-light p-5 mt-5 center-block" style="background-color: white; border-radius: 25px;" 
-      name="form" (ngSubmit)="f.form.valid && createUser()" #f="ngForm" novalidate>
+      name="form" (ngSubmit)="f.form.valid && passwordMatch() && createUser()" #f="ngForm" novalidate>
 
         <p class="h4 mb-4 text-center">Sign up</p>
         
@@ -26,26 +26,42 @@
           <input type="text" name="username"  class="form-control" [(ngModel)]="model.userName" #username="ngModel"
           [ngClass]="{'is-invalid': f.submitted && !username.valid}" placeholder="Username (Between 2 and 12 characters)" 
           required minlength="2" maxlength="12">
-          <div *ngIf="f.submitted && email.invalid" class="invalid-input">
+          <div *ngIf="f.submitted && username.invalid" class="invalid-input">
             <div class="text-danger" *ngIf="username.errors?.required">Username is required</div>
           </div>
-          <div *ngIf="model.userName != '' && email.invalid" class="invalid-input">
+          <div *ngIf="model.userName != '' && username.invalid" class="invalid-input">
             <div class="text-danger" *ngIf="username.errors?.minlength">UserName minimum length is 2 characters</div>
             <div class="text-danger" *ngIf="username.errors?.maxlength">UserName maximum length is 12 characters</div>
           </div>
         </div>
         <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" name="password"  class="form-control" [(ngModel)]="model.password" #password="ngModel" 
-          [ngClass]="{'is-invalid': f.submitted && !password.valid}" placeholder="Password (Between 4 and 12 characters)" 
-          required minlength="4" maxlength="12">
-          <div *ngIf="f.submitted && email.invalid" class="invalid-input">
-            <div class="text-danger" *ngIf="password.errors?.required">Password is required</div>
+          <!-- Password field -->
+          <div>
+            <label for="password">Password</label>
+            <input type="password" name="password"  class="form-control" [(ngModel)]="model.password" #password="ngModel" 
+            [ngClass]="{'is-invalid': (f.submitted && !password.valid) || (f.submitted && !passwordMatch())}" 
+            placeholder="Password (Between 4 and 12 characters)" required minlength="4" maxlength="12">
+            <!-- Error messages -->
+            <div *ngIf="f.submitted && password.invalid" class="invalid-input">
+              <div class="text-danger" *ngIf="password.errors?.required">Password is required</div>
+            </div>
+            <div *ngIf="model.password != '' && password.invalid" class="invalid-input">
+              <div class="text-danger" *ngIf="password.errors?.minlength">Password minimum length is 4 characters</div>
+              <div class="text-danger" *ngIf="password.errors?.maxlength">Password maximum length is 12 characters</div>
+            </div>
           </div>
-          <div *ngIf="model.password != '' && email.invalid" class="invalid-input">
-            <div class="text-danger" *ngIf="password.errors?.minlength">Password minimum length is 4 characters</div>
-            <div class="text-danger" *ngIf="password.errors?.maxlength">Password maximum length is 12 characters</div>
+          <!-- Password confirmation field -->
+          <div style="margin-top: 10px;">
+            <label for="password">Password Confirmation</label> 
+            <input type="password" name="passwordConfirmation"  class="form-control" [(ngModel)]="model.passwordConfirmation" 
+              #passwordConfirmation="ngModel" placeholder="Password" [ngClass]="{'is-invalid': f.submitted && !passwordMatch()}" 
+              required minlength="4" maxlength="12">
+            <!-- Error message -->
+            <div class="invalid-input" *ngIf="f.submitted && !passwordMatch() && model.passwordConfirmation != ''">
+              <div class="text-danger">Passwords do not match</div>
+            </div>
           </div>
+
         </div>
         
         <div style="display: flex; align-items: center; flex-direction: column">
