--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">
         <i class="fa fa-sticky-note text-warning"></i>
-        <span class="text-warning"> MyNotes</span>
+        <span class="text-warning">  Notes WebAPP</span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse"
         data-target="#navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -19,19 +19,18 @@
             <li *ngIf="authority === 'ROLE_ADMIN'" class="nav-item">
                 <a class="nav-link" routerLink="/adminboard">Admin Board</a>
             </li>
-        
         </ul>
         <ul class="navbar-nav">
 
             <li *ngIf="authority" class="nav-item">
-                <a class="nav-link" (click)="logout()">Logout</a>
+                <a class="nav-link" (click)="logout()">Sair</a>
             </li>
             <li *ngIf="!authority && getLOcationPath() != '/signup'" >
-                <a class="nav-link" routerLink="/signup">Signup</a>
+                <a class="nav-link" routerLink="/signup">Cadastre-se</a>
             </li>
     
             <li *ngIf="!authority && getLOcationPath() != '/'" >
-                <a class="nav-link" routerLink="/">Signin</a>
+                <a class="nav-link" routerLink="/">Entrar</a>
             </li>
 
         </ul>
