--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,12 +1,18 @@
 <div class="container">
   <div class="row">
     <div class="offset-3"></div>
-    <div class="col-md-6">
+    <div class="col-md-7">
       <form name="form" class="border border-light p-5 mt-5 center-block" style="background-color: white; border-radius: 25px;" 
       name="form" (ngSubmit)="f.form.valid && createUser()" #f="ngForm" novalidate>
 
-        <p class="h4 mb-4 text-center">Sign up</p>
+        <p class="h4 mb-4 text-center">Cadastro</p>
         
+        <p class="instruction">
+          O primeiro passo do castro é confirmar seu email. Informe seu email e aguarde na 
+          caixa de entrada do mesmo o recebimento do email de confirmação para darmos continuidade
+          ao processo de registro.
+        </p>
+
         <div class="form-group">
           <label for="email">Email</label>
           <input type="text" name="email" class="form-control" [(ngModel)]="model.email" #email="ngModel" placeholder="Email"
@@ -33,7 +39,7 @@
             <button class="btn btn-info my-4" [disabled]="logging">
               <span *ngIf="logging" class="spinner-border spinner-border-sm text-warning" role="status" 
               aria-hidden="true"></span>
-              Sign Up
+              Cadastrar
             </button>
           </div>
 
