--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -6,7 +6,7 @@
         <div class="row mt-6" style="margin-top:12px; padding: 10px">
           <div class="col-md-8 search-menu">
             <input type="text" [(ngModel)]="searchText" class="form-control" style="width:100%;" 
-              placeholder="Search notes ...">
+              placeholder="Buscar notas ...">
           </div>
           <div class="col-md-4 creation-menu">
             <!-- Create new notebook -->
@@ -29,7 +29,7 @@
             <br>
             <div class="list-group list-group-flush">
               <a class="list-group-item  list-group-item-action" (click)="selectAllNotes()">
-                <i class="fa fa-book"></i>&nbsp;All
+                <i class="fa fa-book"></i>&nbsp;Todas
               </a>
               <!-- Notebook list -->
               <a *ngFor="let notebook of notebooks" (click)="selectNotebook(notebook)" class="list-group-item list-group-item-action">
@@ -51,14 +51,15 @@
                 <div class="col-md-12">
                   <!-- Message if there are no notes -->
                   <h3><p *ngIf="selectedNotebook != null">{{selectedNotebook.name}}</p></h3>
-                  <h3><p *ngIf="selectedNotebook == null">All notes</p></h3>
-                  <p *ngIf="this.notes.length === 0">There are no notes do display in this notebook</p>
+                  <h3><p *ngIf="selectedNotebook == null">Todas as notas</p></h3>
+                  <p *ngIf="this.notes.length === 0">Não há notas para mostrar neste notebook</p>
                 </div>
               </div>
               <div class="row">
                 <!-- Note list --> 
                 <app-note *ngFor="let n of notes | noteSearchFilter:searchText" 
                   [note]="n"
+                  (click)="noteClickEvent(n)"
                   (noteUpdated)="updateNote($event)" 
                   (noteDeleted)="deleteNote($event)"
                   [deletingNote]="deletingNote">
@@ -68,7 +69,7 @@
             <!-- Loading spinner -->
             <div *ngIf="loadingNotes" style="text-align: center;">
               <div class="spinner-border" style="width: 6rem; height: 6rem; color: brown; " role="status">
-                  <span class="sr-only">Loading...</span>
+                  <span class="sr-only">Carregando...</span>
               </div>  
             </div>
           </div>
@@ -78,12 +79,23 @@
     <div class="col-md-3">
       <div class="row mt-8 note-details">
         <div class="col-md-12">
-            <p class="text-center">Note Details</p> 
+          <p class="text-center">Detalhes da nota selecionadas</p> 
+          <div *ngIf="selectedNote != null">
+            <p>Título: {{selectedNote.title}}</p>
+            <p>Último update: {{selectedNote.lastModifiedOn | date:'dd-MM-yyyy HH:mm'}}</p>
+            Cor <input size="1px" 
+                      [cpOKButton]="true"
+                      [(colorPicker)]="selectedNote.backgroundColor" 
+                      [style.background]="selectedNote.backgroundColor"
+                      [cpPosition]="'bottom-right'"
+                      (cpToggleChange)="noteColorDialogClosed($event)"
+                      (colorPickerChange)="noteColorChangeEvent($event)"/>    
+          </div>
         </div>
       </div>
       <div class="row mt-4 notifications">
         <div class="col-md-12"> 
-          <p class="text-center">Notifications</p>
+          <p class="text-center">Notificações</p>
           <app-toaster></app-toaster>
         </div>  
       </div>
