--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -14,7 +14,7 @@
                 <a class="nav-link" routerLink="/notes">Notes</a>
             </li>
             <li *ngIf="authority === 'ROLE_USER'" class="nav-item" data-toggle="collapse">
-                <a class="nav-link" routerLink="/configuration">Configuração</a>
+                <a class="nav-link" routerLink="/configuration">Configurações</a>
             </li>
             <li *ngIf="authority === 'ROLE_USER'" class="nav-item" data-toggle="collapse">
                 <a class="nav-link" routerLink="/feedback">Feedback</a>
