--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -79,7 +79,7 @@
     <div class="col-md-3">
       <div class="row mt-8 note-details">
         <div class="col-md-12">
-          <p class="text-center">Detalhes da nota selecionadas</p> 
+          <p class="text-center">Detalhes da nota selecionada</p> 
           <div *ngIf="selectedNote != null">
             <p>Título: {{selectedNote.title}}</p>
             <p>Último update: {{selectedNote.lastModifiedOn | date:'dd-MM-yyyy HH:mm'}}</p>
