--- a/src/app/configuration/configuration.component.html
+++ b/src/app/configuration/configuration.component.html
@@ -68,6 +68,7 @@
                             [siteKey]="key" 
                             [ngModel]="recaptcha"
                             name="captchaElem"
+                            size="compact"
                             (success)="handleSuccess($event)">
                             </ngx-recaptcha2>
                             <div class="text-danger" *ngIf="captchaError">Captcha é obrigatório!</div>
