--- a/src/app/main-banner/main-banner.component.html
+++ b/src/app/main-banner/main-banner.component.html
@@ -1,46 +1,41 @@
-<div class="center-block">
-
-  <div class="banner">
-
-    <ul>
-      <li>
-        <a href="#">
-          <h2>#1 Anote</h2>
-          <p>Faça notas das coisas importantes para você.</p>
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <h2>#2 Organize</h2>
-          <p>Organize tudo em notebooks.</p>
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <h2>#3 Lembre</h2>
-          <p>Acesse suas notas de onde quiser e quando quiser.</p>
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <h2>#4 Configure</h2>
-          <p>Configure notificações e personalize suas notas (ainda não implementado).</p>
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <h2>#5 Colabore</h2>
-          <p>Compartilhe notas com outros usuários. (ainda não implementado)</p>
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <h2>#6 Também no Android</h2>
-          <p>Acesse suas notas pelo app. (ainda não implementado)</p>
-        </a>
-      </li>
-    </ul>
-
-
-  </div>
-</div>      
+<div class="banner text-center" style="height: 100%;">
+  <ul>
+    <li>
+      <a href="#">
+        <h2>#1 Anote</h2>
+        <p>Faça notas das coisas importantes para você.</p>
+      </a>
+    </li>
+    <li>
+      <a href="#">
+        <h2>#2 Organize</h2>
+        <p>Organize tudo em notebooks.</p>
+      </a>
+    </li>
+    <li>
+      <a href="#">
+        <h2>#3 Lembre</h2>
+        <p>Acesse suas notas de onde quiser e quando quiser.</p>
+      </a>
+    </li>
+    <!--
+    <li>
+      <a href="#">
+        <h2>#4 Configure</h2>
+        <p>Configure notificações e personalize suas notas (ainda não implementado).</p>
+      </a>
+    </li>
+    <li>
+      <a href="#">
+        <h2>#5 Colabore</h2>
+        <p>Compartilhe notas com outros usuários. (ainda não implementado)</p>
+      </a>
+    </li>
+    <li>
+      <a href="#">
+        <h2>#6 Também no Android</h2>
+        <p>Acesse suas notas pelo app. (ainda não implementado)</p>
+      </a>
+    </li> -->
+  </ul>
+</div>
