--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">
         <i class="fa fa-sticky-note text-warning"></i>
-        <span class="text-warning">  Notes WebAPP</span>
+        <span class="text-warning">  Notes</span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse"
         data-target="#navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
