Right menu and header are fixed. Closes #10

--- a/src/app/notes/notes.component.css
+++ b/src/app/notes/notes.component.css
@@ -1,3 +1,16 @@
+.container-fluid {
+    margin-top: 80px;
+}
+
+.fixed {
+    position: fixed;
+}
+
+.right-side-bar {
+    position: relative; 
+    padding: 0px;
+}
+
 .notes-panel {
     padding-left: 35px;
 }
