Improve note color selector and fix top margin. Closes #3

--- a/src/app/notes/notes.component.css
+++ b/src/app/notes/notes.component.css
@@ -11,6 +11,12 @@
     padding: 0px;
 }
 
+.circle {
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+}
+
 .notes-panel {
     padding-left: 35px;
 }
