--- a/src/app/configuration/configuration.component.html
+++ b/src/app/configuration/configuration.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container" style="margin-top: 80px;">
 
     <div class="accordion" id="configurations">
         <!-- Update password -->
