--- a/src/app/notes/load-button/load-button.component.html
+++ b/src/app/notes/load-button/load-button.component.html
@@ -1,6 +1,3 @@
-<div class="text-center" *ngIf="hasMore; else messageTemplate">
-  <button class="btn btn-primary">Load More</button>
+<div class="text-center" *ngIf="hasMore">
+  <button class="btn btn-primary">Carregar mais</button>
 </div>
-<ng-template #messageTemplate>
-  <p class="text-center text-muted no-click">No more data to load</p>
-</ng-template>
