--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -5,12 +5,14 @@
         <!-- Note menu (search compoenent and buttons) -->
         <div class="row mt-6" style="margin-top:12px; padding: 10px">
           <div class="col-md-8 search-menu">
-            <input 
-              type="search" 
-              class="form-control" 
-              style="width:100%;"
-              (keyup) = "debounce.next($event.target.value)" 
-              placeholder="Buscar notas ..." autofocus>
+            <form class="form-inline my-2 my-lg-0">
+              <i class="fa fa-search mr-2 my-2 my-sm-0"></i>
+              <input 
+                type="search" 
+                class="form-control w-75 mr-sm-2"
+                (keyup)="debounce.next($event.target.value)" 
+                placeholder="Buscar notas ..." autofocus> 
+            </form>
           </div>
           <div class="col-md-4 creation-menu">
             <!-- Create new notebook -->
